--- a/contactos/src/main/resources/templates/index.html
+++ b/contactos/src/main/resources/templates/index.html
@@ -1,17 +1,31 @@
 <!doctype html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>sistema de contactos</title>
-</head>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{fragmentos/cabecera::cabecera-seccion(titulo='Inicio')}"/>
 <body>
+<!--Menu de navegacion-->
+<div th:replace="~{fragmentos/navegacion::navegacion-seccion}"/>
+<!--Tabla-->
 <div class="container">
-    <div class="container text-center" style="margin:30px">
-        <h3>Sistema de Contactos</h3>
-    </div>
+    <table class="table table-dark table-hover alig-middle">
+        <thead class="table-dark text-center">
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Celular</th>
+            <th scope="col">Email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="contacto: ${listaContactos}">
+            <th th:text="${contacto.idContacto}" scope="row"></th>
+            <td th:text="${contacto.nombre}"></td>
+            <td th:text="${contacto.celular}"></td>
+            <td th:text="${contacto.email}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+<div th:replace="~{fragmentos/pie-pagina::pie-pagina-seccion}"/>
 </body>
 </html>
